# qlib

./: .gitignore  start.bat  stop.bat  update_qlib_data.ps1
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_transactions_table.py  0003_add_retrain_schedule.py  0004_add_ai_analysis_table.py  0005_add_training_runs.py
backend/app/: main.py
backend/app/analysis/: guardrails.py  llm.py  orm.py  prompt.py  router.py  schemas.py  service.py  sources.py  store.py
backend/app/analysis/tests/: test_app_wiring.py  test_candidates_join.py  test_guardrails.py  (+8 more)
backend/app/charts/: router.py  schemas.py  service.py
backend/app/core/: config.py  db.py  exceptions.py  logging.py  qlib_adapter.py  resources.py  watchdog_supervisor.py
backend/app/data/: router.py  schemas.py  service.py
backend/app/evaluation/: __init__.py  router.py  schemas.py  service.py
backend/app/inference/: router.py  schemas.py  service.py
backend/app/models/: recompute.py  router.py  schemas.py  service.py  utils.py
backend/app/ops/: router.py  schemas.py
backend/app/portfolio/: orm.py  router.py  schemas.py  service.py
backend/app/scheduling/: __init__.py  orm.py  router.py  schemas.py  service.py
backend/app/training/: orm.py  router.py  schemas.py  service.py  store.py
backend/tests/: conftest.py  test_candidates_horizons.py  test_charts_horizon_markers.py  test_inference_router.py  test_models_schemas.py  test_refresh_inference_callback.py
backend/tests/integration/: test_app_boot.py  test_chart_e2e.py
(+336 files in other folders)
